<resources>
    <string name="app_name">Health</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_workout">Workout</string>
    <string name="title_about_me">About Me</string>
    <string name="water">Вода</string>
    <string name="glassPost">стак.</string>
    <string name="startingValueOfWater">0</string>
    <string name="buttonToIncreaseDrunkWater">Кнопка для увеличения количества выпитой воды</string>
    <string name="buttonToDecreaseDrunkWater">Кнопка для уменьшения количества выпитой воды</string>
    <string name="yourActivityText">Твоя активность</string>
    <string name="numberOfSteps">кол-во шагов</string>
    <string name="kilometrage">КМ</string>
    <string name="weightStringRes">Вес</string>
    <string name="kilogramStringRes">КГ</string>
    <string name="progressStringRes">Достижения</string>
    <string name="myProfileData">Мои данные</string>
    <string name="myProfileStringRes">Мой профиль</string>
    <string name="myActivityReportStringRes">Отчет</string>
    <string name="informationStringRes">Сведения</string>
    <string name="app_icon">Иконка приложения</string>
    <string name="calories">ккал</string>
    <string name="calories2">Калории</string>
    <string name="yourSex">Ваш пол</string>
    <string name="yourWeight">Ваш вес</string>
    <string name="yourHeight">Ваш рост</string>
    <string name="men">Мужской</string>
    <string name="women">Женский</string>
    <string name="anyGender">Не указано</string>
    <string-array name="genders">
        <item>Мужской</item>
        <item>Женский</item>
        <item>Не указывать</item>
    </string-array>
    <string name="mContinue">Продолжить</string>
    <string name="cancel">Отмена</string>
    <string name="heightStringValue">СМ</string>
    <string name="addStringRes">Добавить</string>
    <string name="steps">Шаги</string>
    <string name="steps2">Шаг.</string>
    <string name="distance">Расстояние</string>
    <string name="hello">Привет</string>
    <string name="yourImageRes">Твое изображение</string>
    <string name="historyOfUrTrainings">История ваших тренировок</string>
    <string name="historyOfUrEx">История ваших упражнений</string>
    <string name="weight">Текущий вес - %s кг</string>
    <string name="height">Текущий рост - %s см</string>
    <string name="gender">Пол - %s</string>
    <string name="statistics">Статистика</string>
    <string name="left_chevron">Left chevron</string>
    <string name="server_client_id">119728534049-st498o7e9vsatp0m1b0qthh8g8vr5tnf.apps.googleusercontent.com</string>
    <string name="login_with_google">Login with Google</string>
    <string name="loginActivityHello">Для дальнейшей работы приложения требуется войти в аккаунт Google и дать несколько разрешений</string>
</resources>

