<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewModel" type="com.example.testcoursework.viewmodel.HomeViewModel"/>
    </data>
    <LinearLayout
            android:layout_marginTop="@dimen/normalLayoutMargin"
            android:layout_marginLeft="@dimen/normalLayoutMargin"
            android:layout_marginRight="@dimen/normalLayoutMargin"
            android:paddingStart="@dimen/normalLayoutPadding"
            android:paddingEnd="@dimen/normalLayoutPadding"
            android:background="@drawable/backgroundforlayouts"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                        android:layout_width="53dp"
                        android:layout_height="70dp"
                        android:src="@drawable/ic_exercise_man_activity_icon"
                        android:contentDescription="@string/yourActivityText"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/yourActivityText"
                        android:textSize="@dimen/headerOfTextSize"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <Space
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                <TextView
                        android:textSize="@dimen/headerOfTextSize"
                        android:textStyle="bold"
                        android:id="@+id/currentStepsTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@{String.valueOf(viewModel.numberOfSteps)}"/>
                <TextView
                        android:textSize="@dimen/normalTextSize"
                        android:paddingStart="10dp"
                        android:text="@string/numberOfSteps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        tools:ignore="RtlSymmetry"/>
                <TextView
                        android:textStyle="bold"
                        android:textSize="@dimen/normalTextSize"
                        android:paddingStart="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        tools:ignore="RtlSymmetry"
                        android:text="@{String.valueOf(viewModel.coveredDistance)}"/>
                <TextView
                        android:textSize="@dimen/normalTextSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:paddingStart="10dp"
                        android:text="@string/kilometrage"
                        tools:ignore="RtlSymmetry"/>
            </LinearLayout>
    </LinearLayout>
</layout>