<?xml version="1.0" encoding="utf-8"?>
    <layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.testcoursework.viewModel.HomeViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp">
        <com.loopeer.shadow.ShadowView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true" android:focusable="true"
            android:elevation="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:backgroundColor="@color/water_layout_background"
            app:cornerRadius="28dp"
            app:shadowColor="@color/shadow"
            app:shadowMargin="10dp"
            app:shadowRadius="50dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="325dp"
                    android:layout_marginBottom="58dp"
                    android:background="@drawable/water_layout_ic_waterdrop" />
                <com.loopeer.shadow.ShadowView
                        android:layout_width="139dp"
                    android:layout_height="62dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="37dp"
                    android:layout_marginEnd="19dp"
                    android:layout_marginBottom="31dp"
                    android:elevation="10dp"
                    android:foreground="?attr/selectableItemBackground"
                    app:cornerRadius="12dp"
                    app:backgroundColor="@color/water_layout_button_background"
                    app:shadowColor="@color/shadow"
                    app:shadowDx="10"
                    app:shadowDy="10"
                    app:shadowMarginBottom="5dp"
                    app:shadowMarginRight="5dp"
                    app:shadowRadius="4dp">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/home_fragment_water_layout_add_button"
                        android:clickable="true"
                        app:layout_gravity="center"
                        android:contentDescription="@string/buttonToIncreaseDrunkWater"
                        android:focusable="true"
                        android:onClick="@{()-> viewModel.increaseTheAmountOfWaterDrunk()}"
                        android:text="@string/addStringRes"
                        android:textColor="@color/white" />
                </com.loopeer.shadow.ShadowView>
                <RelativeLayout
                    android:id="@+id/water"
                    android:layout_width="103dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="69dp">
                    <TextView
                        android:layout_width="48dp"
                        android:layout_height="20dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="52dp"
                        android:layout_marginBottom="28dp"
                        android:fontFeatureSettings="pnum, lnum"
                        android:gravity="center_horizontal|top"
                        android:lineSpacingExtra="4sp"
                        android:text="@string/water"
                        android:textAppearance="@style/some_id" />
                    <TextView
                        android:id="@+id/numberOfWater"
                        android:layout_width="45dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="20dp"
                        android:fontFeatureSettings="pnum, lnum"
                        android:lineSpacingExtra="4sp"
                        android:text="@{String.valueOf(viewModel.countOfDrunkWater)}"
                        android:textAlignment="viewEnd"
                        android:textAppearance="@style/some_id"
                        android:textSize="@dimen/normalTextSize"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/some_id"
                        android:layout_width="53dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="46dp"
                        android:layout_marginTop="24dp"
                        android:fontFeatureSettings="pnum, lnum"
                        android:gravity="center_horizontal|center_vertical"
                        android:lineSpacingExtra="9sp"
                        android:text="@string/glassPost"
                        android:textAppearance="@style/some_id" />
                </RelativeLayout>
            </RelativeLayout>
        </com.loopeer.shadow.ShadowView>
    </LinearLayout>
</layout>