<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
            <variable name="viewModel" type="com.example.testcoursework.viewModel.PersonViewModel"/>
    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <com.loopeer.shadow.ShadowView
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:elevation="10dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:backgroundColor="@color/top_bar_background"
                app:cornerRadiusBL="34dp"
                app:cornerRadiusBR="34dp"
                app:shadowMarginBottom="10dp"
                app:shadowColor="@color/shadow"
                app:shadowRadius="10dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="144dp">

                <com.loopeer.shadow.ShadowView
                        android:layout_marginStart="50dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:elevation="10dp"
                        android:foreground="?attr/selectableItemBackground"
                        app:cornerRadius="10dp"
                        app:shadowColor="@color/shadow"
                        app:shadowDx="10"
                        app:shadowDy="10"
                        app:shadowMarginBottom="10dp"
                        app:shadowMarginRight="10dp"
                        app:shadowRadius="4dp">

                    <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:background="@mipmap/ic_launcher_round"
                            android:contentDescription="@string/yourImageRes"
                            android:visibility="visible" />
                </com.loopeer.shadow.ShadowView>
                 <LinearLayout
                         android:layout_gravity="center_vertical"
                         android:layout_marginStart="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">

                     <TextView
                             android:id="@+id/textView3"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text='@{viewModel.fullName.get() != null ? viewModel.fullName.get() : "-"}'
                             android:textColor="@color/white"
                             android:textSize="@dimen/headerOfTextSize" />

                     <TextView
                             android:id="@+id/textView4"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text='@{viewModel.email.get() != null ? viewModel.email.get() : "-"}'
                             android:textColor="@color/white" />
                 </LinearLayout>

            </LinearLayout>

        </com.loopeer.shadow.ShadowView>

        <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">
            <com.loopeer.shadow.ShadowView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:onClick="@{() -> viewModel.onClick(1)}"
                    android:layout_height="match_parent"
                    android:clickable="true" android:focusable="true"
                    android:elevation="10dp"
                    android:foreground="?attr/selectableItemBackground"
                    app:backgroundColor="@color/progress_card_background"
                    app:cornerRadius="15dp"
                    app:shadowDx="10"
                    app:shadowDy="10"
                    app:shadowColor="@color/shadow"
                    app:shadowMargin="10dp"
                    app:shadowRadius="4dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_gravity="center"
                            android:drawableTop="@drawable/person_fragment_ic_trophy"
                            android:textSize="@dimen/headerOfTextSize"
                            android:textColor="@color/white"
                            android:drawablePadding="20dp"
                            android:textAlignment="center"
                            android:text="@string/progressStringRes"/>
            </com.loopeer.shadow.ShadowView>
            <com.loopeer.shadow.ShadowView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:onClick="@{() -> viewModel.onClick(2)}"
                    android:layout_height="match_parent"
                    android:clickable="true" android:focusable="true"
                    android:elevation="10dp"
                    android:foreground="?attr/selectableItemBackground"
                    app:backgroundColor="@color/profile_card_background"
                    app:cornerRadius="15dp"

                    app:shadowDx="10"
                    app:shadowDy="10"
                    app:shadowColor="@color/shadow"
                    app:shadowMargin="10dp"
                    app:shadowRadius="4dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_gravity="center"
                        android:drawableTop="@drawable/person_fragment_ic_resume"
                        android:textSize="@dimen/headerOfTextSize"
                        android:textColor="@color/white"
                        android:drawablePadding="20dp"
                        android:textAlignment="center"
                        android:text="@string/myProfileStringRes"/>
            </com.loopeer.shadow.ShadowView>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal">
            <com.loopeer.shadow.ShadowView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:onClick="@{() -> viewModel.onClick(3)}"
                    android:layout_height="match_parent"
                    android:clickable="true" android:focusable="true"
                    android:elevation="10dp"
                    android:foreground="?attr/selectableItemBackground"
                    app:backgroundColor="@color/report_card_background"
                    app:cornerRadius="15dp"
                    app:shadowDx="10"
                    app:shadowDy="10"
                    app:shadowColor="@color/shadow"
                    app:shadowMargin="10dp"
                    app:shadowRadius="4dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_gravity="center"
                        android:drawableTop="@drawable/person_fragment_ic_growth"
                        android:textSize="@dimen/headerOfTextSize"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:drawablePadding="20dp"
                        android:text="@string/myActivityReportStringRes"/>
            </com.loopeer.shadow.ShadowView>
            <com.loopeer.shadow.ShadowView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:onClick="@{() -> viewModel.onClick(4)}"
                    android:layout_height="match_parent"
                    android:clickable="true" android:focusable="true"
                    android:elevation="10dp"
                    android:foreground="?attr/selectableItemBackground"
                    app:backgroundColor="@color/info_card_background"
                    app:cornerRadius="15dp"
                    app:shadowDx="10"
                    app:shadowDy="10"
                    app:shadowColor="@color/shadow"
                    app:shadowMargin="10dp"
                    app:shadowRadius="4dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_gravity="center"
                        android:drawableTop="@drawable/person_fragment_ic_support"
                        android:textSize="@dimen/headerOfTextSize"
                        android:textColor="@color/white"
                        android:drawablePadding="20dp"
                        android:textAlignment="center"
                        android:text="@string/informationStringRes"/>
            </com.loopeer.shadow.ShadowView>
        </LinearLayout>
    </LinearLayout>
</layout>