<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="com.example.testcoursework.viewModel.ProfileViewModel"/>
    </data>
    <LinearLayout
            android:orientation="vertical"
            android:background="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activity.ProfileActivity">
        <RelativeLayout
                android:id="@+id/genderLayout"
                android:clickable="true"
                android:focusable="true"
                android:onClick="changeGenderDialog"
                android:background="@drawable/backgroundforbuttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normalButtonsPadding"
                android:layout_marginLeft="@dimen/marginForButtonsLeftRight"
                android:layout_marginRight="@dimen/marginForButtonsLeftRight"
                android:layout_marginTop="@dimen/normalLayoutMargin" >
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/person_activity_ic_genders"
                    android:contentDescription="@string/yourSex"/>
            <TextView
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/yourSex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:paddingEnd="@dimen/normalButtonsPadding"
                    tools:ignore="RtlSymmetry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:text="@{String.valueOf(viewModel.gender)}"/>
        </RelativeLayout>
        <RelativeLayout
                android:clickable="true"
                android:focusable="true"
                android:onClick="changeWeightDialog"
                android:background="@drawable/backgroundforbuttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normalButtonsPadding"
                android:layout_marginLeft="@dimen/marginForButtonsLeftRight"
                android:layout_marginRight="@dimen/marginForButtonsLeftRight"
                android:layout_marginTop="@dimen/normalLayoutMargin" >
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/home_fragment_ic_bathroom_scale"
                    android:contentDescription="@string/yourWeight"/>
            <TextView
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/yourWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:paddingEnd="@dimen/normalButtonsPadding"
                    tools:ignore="RtlSymmetry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:text="@{String.valueOf(viewModel.weight) + ' ' + @string/kilogramStringRes}"/>
        </RelativeLayout>
        <RelativeLayout
                android:clickable="true"
                android:focusable="true"
                android:onClick="changeHeightDialog"
                android:background="@drawable/backgroundforbuttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normalButtonsPadding"
                android:layout_marginLeft="@dimen/marginForButtonsLeftRight"
                android:layout_marginRight="@dimen/marginForButtonsLeftRight"
                android:layout_marginTop="@dimen/normalLayoutMargin" >
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/person_activity_ic_height"
                    android:contentDescription="@string/yourSex"/>
            <TextView
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:textColor="@color/textColorBlack"
                    android:text="@string/yourHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:paddingEnd="@dimen/normalButtonsPadding"
                    tools:ignore="RtlSymmetry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:text="@{String.valueOf(viewModel.height) + ' ' + @string/heightStringValue}"/>
        </RelativeLayout>
    </LinearLayout>
</layout>